# Ermolaev-Aleksandr

./: Makefile  main.py  pyproject.toml
VD_games/: cli.py
VD_games/scripts/: VD_calc.py  VD_even.py  VD_games.py  VD_gcd.py  VD_main.py  VD_progression.py  vd_prime.py
ermolaev_aleksandr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
